syntax = "proto3";

package example.bubble;
import "test_common.proto";
option java_multiple_files = true;

message Test1Message {
  TestCommonMessage test_common_message = 1;
  string string1 = 2;
  repeated int32 list1 = 3;
}